methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:2: error: '(' expected but identifier found.
def move(stepCount: Int,forward: Boolean) {if forward then for (i<-1 to stepCount) {forward()} else {backward()}} 
                                              ^MethodsArgs:2: error: illegal start of simple expression
def move(stepCount: Int,forward: Boolean) {if forward then for (i<-1 to stepCount) {forward()} else {backward()}} 
                                                                                                                ^