methods.args.MethodsArgs.scala.code
def move(stepCount: Int,forward: Boolean) {if forward then for (i<-1 to stepCount) {forward()} else {backward()}}